--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
   <a href="/Heart-Css/index.html">Heart CSS</a>
   <a href="/Menu-Css/index.html">Menu CSS</a>
+  <a href="/BgGradient-Css/index.html">BgGradient CSS</a>
+  <a href="/Button-Css/index.html">Button CSS</a>
 </body>
 </html>
