--- a/Pulse-Css/index.html
+++ b/Pulse-Css/index.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Pulse Animation CSS</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+  
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="pulse"></div>
+  <div class="pulse">
+    <i class="fas fa-bell"></i>
+  </div>
 </body>
 </html>
