--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <a href="/Menu-Css/index.html">Menu CSS</a>
   <a href="/BgGradient-Css/index.html">BgGradient CSS</a>
   <a href="/Button-Css/index.html">Button CSS</a>
+  <a href="/Pulse-Css/index.html">Pulse CSS</a>
 </body>
 </html>
