--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Frontend Challenges</title>
-</head>
-<body>
-  <a href="/Heart-Css/index.html">Heart CSS</a>
-  <a href="/Menu-Css/index.html">Menu CSS</a>
-  <a href="/BgGradient-Css/index.html">BgGradient CSS</a>
-  <a href="/Button-Css/index.html">Button CSS</a>
-  <a href="/Pulse-Css/index.html">Pulse CSS</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frontend Challenges</title>
+  </head>
+  <body>
+    <a href="/Heart-Css/index.html">Heart CSS</a>
+    <a href="/Menu-Css/index.html">Menu CSS</a>
+    <a href="/BgGradient-Css/index.html">BgGradient CSS</a>
+    <a href="/Button-Css/index.html">Button CSS</a>
+    <a href="/Pulse-Css/index.html">Pulse CSS</a>
+  </body>
 </html>
