--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="/BgGradient-Css/index.html">BgGradient CSS</a>
     <a href="/Button-Css/index.html">Button CSS</a>
     <a href="/Pulse-Css/index.html">Pulse CSS</a>
+    <a href="/Battery-Css/index.html">Battery CSS</a>
   </body>
 </html>
