--- a/Cards-Css/index.html
+++ b/Cards-Css/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="card">
+    <input type="radio" name="pricing" id="card1">
+    <label for="card1">
+      
+    </label>
+  </div>
 </body>
 </html>
