--- a/Cards-Css/index.html
+++ b/Cards-Css/index.html
@@ -11,7 +11,34 @@
   <div class="card">
     <input type="radio" name="pricing" id="card1">
     <label for="card1">
-      
+      <h4>BASIC</h4>
+      <h2>
+        <span>$</span>
+        15
+        <span>/month</span>
+      </h2>
+    </label>
+  </div>
+  <div class="card">
+    <input type="radio" name="pricing" id="card1">
+    <label for="card2">
+      <h4>STANDARD</h4>
+      <h2>
+        <span>$</span>
+        35
+        <span>/month</span>
+      </h2>
+    </label>
+  </div>
+  <div class="card">
+    <input type="radio" name="pricing" id="card1">
+    <label for="card3">
+      <h4>PREMIUM</h4>
+      <h2>
+        <span>$</span>
+        120
+        <span>/month</span>
+      </h2>
     </label>
   </div>
 </body>
