--- a/Cards-Css/index.html
+++ b/Cards-Css/index.html
@@ -4,14 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Cars Plan CSS</title>
+  <!--Google Font-->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <!--Linking Stylesheet-->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="card">
     <input type="radio" name="pricing" id="card1">
     <label for="card1">
-      <h4>BASIC</h4>
+      <h5>BASIC</h5>
       <h2>
         <span>$</span>
         15
@@ -20,9 +24,9 @@
     </label>
   </div>
   <div class="card">
-    <input type="radio" name="pricing" id="card1">
+    <input type="radio" name="pricing" id="card2" checked>
     <label for="card2">
-      <h4>STANDARD</h4>
+      <h5>STANDARD</h>
       <h2>
         <span>$</span>
         35
@@ -33,7 +37,7 @@
   <div class="card">
     <input type="radio" name="pricing" id="card1">
     <label for="card3">
-      <h4>PREMIUM</h4>
+      <h5>PREMIUM</h5>
       <h2>
         <span>$</span>
         120
