--- a/Glassmorphism-Css/index.html
+++ b/Glassmorphism-Css/index.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="background">
+    <div class="shape"></div>
+    <div class="shape"></div>
+  </div>
+  <form>
+
+  </form>
 </body>
 </html>
