--- a/Glassmorphism-Css/index.html
+++ b/Glassmorphism-Css/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Glassmorphism Form CSS</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +15,17 @@
     <div class="shape"></div>
   </div>
   <form>
+    <h3>Welcome Back!
+      <span>Login to your account</span>
+    </h3>
+    
+    <label for="username">Username</label>
+    <input type="text" placeholder="For ex. ItaloDs" id="username">
+    
+    <label for="password">Password</label>
+    <input type="password" placeholder="Minimun 6 caracteres" id="password">
 
+    <button></button>
   </form>
 </body>
 </html>
