--- a/Glassmorphism-Css/index.html
+++ b/Glassmorphism-Css/index.html
@@ -20,12 +20,12 @@
     </h3>
     
     <label for="username">Username</label>
-    <input type="text" placeholder="For ex. ItaloDs" id="username">
+    <input type="text" placeholder="For ex. ItaloDs" id="username" autocomplete="off">
     
     <label for="password">Password</label>
     <input type="password" placeholder="Minimun 6 caracteres" id="password">
 
-    <button></button>
+    <button>Sing In</button>
   </form>
 </body>
 </html>
