--- a/ClockGlassmorphism-Css/index.html
+++ b/ClockGlassmorphism-Css/index.html
@@ -10,6 +10,9 @@
 <body>
   <div class="clock">
     <img src="clock template.svg" alt="clock">
+    <div class="hour hand" id="hour"></div>
+    <div class="minute hand" id="minute"></div>
+    <div class="seconds hand" id="seconds"></div>
   </div>
 </body>
 </html>
