--- a/WeatherGlassmorphism-Css/index.html
+++ b/WeatherGlassmorphism-Css/index.html
@@ -5,8 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather Grandient CSS</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="card">
+    <h4>NEW DELHI</h4>
+    <h6>PARTLY CLOUDY</h6>
+    <img src="icon.png" alt="Icon">
+    <h1>32<sup>&deg;</sup></h1>
+    <div class="container">
+      <div class="details">
+        <p>max</p>
+        <span>32<sup>&deg;</sup></span>
+      </div>
+      <div class="details">
+        
+      </div>
+    </div>
+  </div>
 </body>
 </html>
