--- a/WeatherGlassmorphism-Css/index.html
+++ b/WeatherGlassmorphism-Css/index.html
@@ -19,7 +19,8 @@
         <span>32<sup>&deg;</sup></span>
       </div>
       <div class="details">
-        
+        <p>min</p>
+        <span>30<sup>&deg;</sup></span>
       </div>
     </div>
   </div>
