--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <title>Frontend Challenges</title>
   </head>
   <body>
-    <a href="/Heart-Css/index.html">Heart CSS</a>
-    <a href="/Menu-Css/index.html">Menu CSS</a>
-    <a href="/BgGradient-Css/index.html">BgGradient CSS</a>
-    <a href="/Button-Css/index.html">Button CSS</a>
-    <a href="/Pulse-Css/index.html">Pulse CSS</a>
     <a href="/Battery-Css/index.html">Battery CSS</a>
+    <a href="/BgGradient-Css/index.html">BgGradient CSS</a>
+    <a href="/orderGradient-Css/index.html">Border Gradient CSS</a>
+    <a href="/Button-Css/index.html">Button CSS</a>
+    <a href="/ButtonGlass-Css/index.html">Button Glassmorphism CSS</a>
+    <a href="/Cards-Css/index.html">Cards CSS</a>
+    <a href="/ClockGlassmorphism-Css/index.html">Clock Glassmorphism CSS</a</>>
+    <a href="/Heart-Css/index.html">Heart CSS</a>
+    <a href="/Loading-Css/index.html">Loading CSS</a>
+    <a href="/LoginGlassmorphism-Css/index.html">Login Glassmorphism CSS</a>
+    <a href="/Menu-Css/index.html">Menu CSS</a>
+    <a href="/Pulse-Css/index.html">Pulse CSS</a>
+    <a href="/WeatherGlassmorphism-Css/index.html">Weather Glassmorphism CSS</a>
   </body>
 </html>
