--- a/index.html
+++ b/index.html
@@ -1,24 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend Challenges</title>
-  </head>
-  <body>
-    <a href="/Battery-Css/index.html">Battery CSS</a>
-    <a href="/BgGradient-Css/index.html">BgGradient CSS</a>
-    <a href="/orderGradient-Css/index.html">Border Gradient CSS</a>
-    <a href="/Button-Css/index.html">Button CSS</a>
-    <a href="/ButtonGlass-Css/index.html">Button Glassmorphism CSS</a>
-    <a href="/Cards-Css/index.html">Cards CSS</a>
-    <a href="/ClockGlassmorphism-Css/index.html">Clock Glassmorphism CSS</a</>>
-    <a href="/Heart-Css/index.html">Heart CSS</a>
-    <a href="/Loading-Css/index.html">Loading CSS</a>
-    <a href="/LoginGlassmorphism-Css/index.html">Login Glassmorphism CSS</a>
-    <a href="/Menu-Css/index.html">Menu CSS</a>
-    <a href="/Pulse-Css/index.html">Pulse CSS</a>
-    <a href="/WeatherGlassmorphism-Css/index.html">Weather Glassmorphism CSS</a>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Frontend Challenges</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="container">
+    <h1>Projetos Desenvolvidos:</h1>
+    <h3>Todos os projetos foram desenvovidos com o objetivo de absorver conhecimentos.</h3>
+    <h3>Linguagens: <span>HTLM, CSS e JS</span></h3>
+    <ul>
+      <li>
+        <a href="/Battery-Css/index.html">Battery CSS</a>
+      </li>
+      <li>
+        <a href="/BgGradient-Css/index.html">Background Gradient CSS</a>
+      </li>
+      <li>
+        <a href="/orderGradient-Css/index.html">Border Gradient CSS</a>
+      </li>
+      <li>
+        <a href="/Button-Css/index.html">Button CSS</a>
+      </li>
+      <li>
+        <a href="/ButtonGlass-Css/index.html">Button Glassmorphism CSS</a>
+      </li>
+      <li>
+        <a href="/Cards-Css/index.html">Cards CSS</a>
+      </li>
+      <li>
+        <a href="/ClockGlassmorphism-Css/index.html">Clock Glassmorphism CSS</a>
+      </li>
+      <li>
+        <a href="/Heart-Css/index.html">Heart CSS</a>
+      </li>
+      <li>
+        <a href="/Loading-Css/index.html">Loading CSS</a>
+      </li>
+      <li>
+        <a href="/LoginGlassmorphism-Css/index.html">Login Glassmorphism CSS</a>
+      </li>
+      <li>
+        <a href="/Menu-Css/index.html">Menu CSS</a>
+      </li>
+      <li>
+        <a href="/Pulse-Css/index.html">Pulse CSS</a>
+      </li>
+      <li>
+        <a href="/WeatherGlassmorphism-Css/index.html">Weather Glassmorphism CSS</a>
+      </li>
+    </ul>
+    <footer>Developed by <a href="https://github.com/italods/">Italo Pereira</a></footer>
+  </div>
+
+</body>
+
 </html>
