--- a/ShadowText-Css/index.html
+++ b/ShadowText-Css/index.html
@@ -9,6 +9,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h3>HATCHED</h3>
+  <h3 data-text="HATCHED">HATCHED</h3>
 </body>
 </html>
