--- a/SkeletonLoading-Css/index.html
+++ b/SkeletonLoading-Css/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <div class="card">
-    
+    <div class="thumbnail"></div>
+    <h1></h1>
+    <p></p>
   </div>
 </body>
 </html>
