--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         <a href="/Pulse-Css/index.html">Pulse CSS</a>
       </li>
       <li>
-        <a href="ShadowText-Css/index.html">Shadow Text CSS</a>
+        <a href="/ShadowText-Css/index.html">Shadow Text CSS</a>
+      </li>
+      <li>
+        <a href="/SkeletonLoading-Css/index.html">Skeleton Loading CSS</a>
       </li>
       <li>
         <a href="/WeatherGlassmorphism-Css/index.html">Weather Glassmorphism CSS</a>
