--- a/ScrollMask-Css/index.html
+++ b/ScrollMask-Css/index.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="parallax">
+    <div class="mask">
+      <div class="headline">CSS MASK</div>
+    </div>
+  </div>
+  <div class="contant-div">
+
+  </div>
 </body>
 </html>
