--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <a href="/Pulse-Css/index.html">Pulse CSS</a>
       </li>
       <li>
+        <a href="/ScrollMask-Css/index.html">ScrollMask CSS</a>
+      </li>
+      <li>
         <a href="/ShadowText-Css/index.html">Shadow Text CSS</a>
       </li>
       <li>
