--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <a href="/BorderGradient-Css/index.html">Border Gradient CSS</a>
       </li>
       <li>
+        <a href="/BorderRainbow-Css/index.html">Border Rainbow CSS</a>
+      </li>
+      <li>
         <a href="/Button-Css/index.html">Button CSS</a>
       </li>
       <li>
