--- a/BorderRainbow-Css/index.html
+++ b/BorderRainbow-Css/index.html
@@ -5,8 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Border Rainbow CSS</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div></div>
 </body>
 </html>
+<!--
+  DATA: 13/03/2020
+  LINK - TUTORIAL: https://www.youtube.com/watch?v=cJillURnY2U
+-->
