--- a/index.html
+++ b/index.html
@@ -73,3 +73,7 @@
 </body>
 
 </html>
+<!--
+  Site com todos os projetos desenvolvidos abaixo:
+  LINK : https://italods-frontend-challenges.netlify.app/
+-->
