--- a/TriangleHeader-Css/index.html
+++ b/TriangleHeader-Css/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <header>
-    
+    <div class="text-container">
+      <h1>TRIANGLE SHAPE HEADER</h1>
+      <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+    </div>
   </header>
 </body>
 </html>
