--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <a href="/ButtonGlass-Css/index.html">Button Glassmorphism CSS</a>
       </li>
       <li>
+        <a href="/ButtonGradient-Css/index.html">Button Gradient CSS</a>
+      </li>
+      <li>
         <a href="/Cards-Css/index.html">Cards CSS</a>
       </li>
       <li>
@@ -62,6 +65,9 @@
       </li>
       <li>
         <a href="/SkeletonLoading-Css/index.html">Skeleton Loading CSS</a>
+      </li>
+      <li>
+        <a href="/TriangleHeader-Css/index.html">Triangle Header CSS</a>
       </li>
       <li>
         <a href="/WeatherGlassmorphism-Css/index.html">Weather Glassmorphism CSS</a>
