--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <a href="/BgGradient-Css/index.html">Background Gradient CSS</a>
       </li>
       <li>
+        <a href="/BgGradientOverlay-Css/index.html">Baclical Gradient Overlay CSS</a>
+      </li>
+      <li>
         <a href="/BorderGradient-Css/index.html">Border Gradient CSS</a>
       </li>
       <li>
