--- a/AuroraGradient-Css/index.html
+++ b/AuroraGradient-Css/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
   <div class="container">
-    
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
   </div>
 </body>
 </html>
+<!--
+  DATA: 25/03/2021
+  LINK - TUTORIAL: https://www.youtube.com/watch?v=lGDU7MYXxqc
+-->
