--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <h3>Linguagens: <span>HTLM, CSS e JS</span></h3>
     <ul>
       <li>
+        <a href="/AuroraGradient-Css/index.html">Aurora Gradient CSS</a>
+      </li>
+      <li>
         <a href="/Battery-Css/index.html">Battery CSS</a>
       </li>
       <li>
