--- a/StylePolaroids-Css/index.html
+++ b/StylePolaroids-Css/index.html
@@ -6,6 +6,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <figure>
+    <img src="image.jpg" alt="my_photo">
+    <figcaption>A Wonderful Day</figcaption>
+  </figure>
 </body>
 </html>
+<!--
+  DATA: 26/03/2021
+  LINK - TUTORIAL: https://www.youtube.com/watch?v=XqVfFTQWkKA
+-->
