--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
         <a href="/SkeletonLoading-Css/index.html">Skeleton Loading CSS</a>
       </li>
       <li>
+        <a href="/StylePolaroids-Css/index.html">Style Polaroids CSS</a>
+      </li>
+      <li>
         <a href="/TriangleHeader-Css/index.html">Triangle Header CSS</a>
       </li>
       <li>
