--- a/ProfileCard-Css/index.html
+++ b/ProfileCard-Css/index.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="card">
+    <div class="card-img">
+      <img src="2.png" alt="profile">
+    </div>
+  </div>
 </body>
 </html>
