--- a/ProfileCard-Css/index.html
+++ b/ProfileCard-Css/index.html
@@ -8,7 +8,11 @@
 <body>
   <div class="card">
     <div class="card-img">
-      <img src="2.png" alt="profile">
+      <img src="17.png" alt="profile">
+    </div>
+    <div class="desc">
+      <h6 class="primary-text">Italo Pereira</h6>
+      <h6 class="secondary-text">Developer</h6>
     </div>
   </div>
 </body>
