--- a/ProfileCard-Css/index.html
+++ b/ProfileCard-Css/index.html
@@ -14,6 +14,17 @@
       <h6 class="primary-text">Italo Pereira</h6>
       <h6 class="secondary-text">Developer</h6>
     </div>
+    <button class="primary-text">View Button</button>
+    <div class="details">
+      <div class="rating">
+        <h6 class="primary-text">86%</h6>
+        <h6 class="secondary-text">Rating</h6>
+      </div>
+      <div class="activity">
+        <h6 class="primary-text">92%</h6>
+        <h6 class="secondary-text">Activity</h6>
+      </div>
+    </div>
   </div>
 </body>
 </html>
