--- a/ProfileCard-Css/index.html
+++ b/ProfileCard-Css/index.html
@@ -14,7 +14,12 @@
       <h6 class="primary-text">Italo Pereira</h6>
       <h6 class="secondary-text">Developer</h6>
     </div>
-    <button class="primary-text">View Button</button>
+
+    <a href="https://github.com/italods/" title="Link to Github" target="_blank">
+      
+      <button class="primary-text">View Profile</button>
+    </a>
+
     <div class="details">
       <div class="rating">
         <h6 class="primary-text">86%</h6>
