--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
         <a href="/Menu-Css/index.html">Menu CSS</a>
       </li>
       <li>
+        <a href="/MultipleBorders-Css/index.html">Multiple Borders CSS</a>
+      </li>
+      <li>
+        <a href="/ProfileCard-Css/index.html">Profile Card CSS</a>
+      </li>
+      <li>
         <a href="/Pulse-Css/index.html">Pulse CSS</a>
       </li>
       <li>
