--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <a href="/BgGradient-Css/index.html">Background Gradient CSS</a>
       </li>
       <li>
-        <a href="/BgGradientOverlay-Css/index.html">Baclical Gradient Overlay CSS</a>
+        <a href="/BgGradientOverlay-Css/index.html">Background Gradient Overlay CSS</a>
+      </li>
+      <li>
+        <a href="/Bookmark-Css/index.html">Bookmark CSS</a>
       </li>
       <li>
         <a href="/BorderGradient-Css/index.html">Border Gradient CSS</a>
