--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <a href="/ClockGlassmorphism-Css/index.html">Clock Glassmorphism CSS</a>
       </li>
       <li>
+        <a href="/DoubleBorder-Css/index.html">Double Border CSS</a>
+      </li>
+      <li>
         <a href="/Heart-Css/index.html">Heart CSS</a>
       </li>
       <li>
