--- a/ClockDigitalGlassmorphism-Css/index.html
+++ b/ClockDigitalGlassmorphism-Css/index.html
@@ -6,7 +6,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container"></div>
+  <div class="container">
+    <div class="clock">
+      <div id="day">Sunday</div>
+      <div class="wrapper">
+        <div id="time">00:00:000</div>
+        <div id="midday">AM</div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
 
