--- a/ClockDigitalGlassmorphism-Css/index.html
+++ b/ClockDigitalGlassmorphism-Css/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <div class="container">
+    <div class="shape1"></div>
+    <div class="shape2"></div>
     <div class="clock">
       <div id="day">Sunday</div>
       <div class="wrapper">
