--- a/ClockDigitalGlassmorphism-Css/index.html
+++ b/ClockDigitalGlassmorphism-Css/index.html
@@ -10,13 +10,15 @@
     <div class="shape1"></div>
     <div class="shape2"></div>
     <div class="clock">
-      <div id="day">Sunday</div>
+      <div id="day"></div>
       <div class="wrapper">
-        <div id="time">00:00:000</div>
-        <div id="midday">AM</div>
+        <div id="time"></div>
+        <div id="midday"></div>
       </div>
     </div>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
 
