--- a/ClockDigitalGlassmorphism-Css/index.html
+++ b/ClockDigitalGlassmorphism-Css/index.html
@@ -24,5 +24,5 @@
 
 <!--
   DATA: 24/08/2021
-  LINK - TUTORIAL: https://www.youtube.com/watch?v=seZf0-3DspQ
+  LINK - TUTORIAL: https://www.youtube.com/watch?v=4Q-i9gbS_PE
 -->
