--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
         <a href="/Pulse-Css/index.html">Pulse CSS</a>
       </li>
       <li>
+        <a href="/RainbowTextAnimation-Css/index.html">Rainbow Text Animation CSS</a>
+      </li>
+      <li>
         <a href="/ScrollMask-Css/index.html">ScrollMask CSS</a>
       </li>
       <li>
