--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
   </div>
 
 </body>
-
 </html>
+<!--Links-->
 <!--
   Site com todos os projetos desenvolvidos abaixo:
   LINK : https://italods-frontend-challenges.netlify.app/
