--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
         <a href="/MultipleBorders-Css/index.html">Multiple Borders CSS</a>
       </li>
       <li>
+        <a href="/PokemonCardGenerator/index.html">Pokemon Card Generator CSS</a>
+      </li>
+      <li>
         <a href="/ProfileCard-Css/index.html">Profile Card CSS</a>
       </li>
       <li>
