--- a/PokemonCardGenerator/index.html
+++ b/PokemonCardGenerator/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <div id="card">
-           
+
     </div>
     <button id="btn">Generate</button>
   </div>
@@ -18,7 +18,7 @@
 </html>
 
 <!--
-  DATA: 25/08/2021
-  LINK - TUTORIAL: https://www.youtube.com/watch?v=BY4uU6CNtTg
+  DATA: 14/09/2021
+  LINK - TUTORIAL: https://www.youtube.com/watch?v=_JUSpgchD1I
 -->
 
