--- a/RainbowUnderlineHover/index.html
+++ b/RainbowUnderlineHover/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Rainbow Underline Hover CSS</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,6 +10,6 @@
 </body>
 </html>
 <!--
-  DATA: 06/03/2021
-  LINK - TUTORIAL: https://www.youtube.com/watch?v=-GlIQe7rnQM&t=1s
+  DATA: 15/09/2021
+  LINK - TUTORIAL: https://www.youtube.com/watch?v=KCTW8dCKHlI
 -->
