--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
         <a href="/RainbowTextAnimation-Css/index.html">Rainbow Text Animation CSS</a>
       </li>
       <li>
+        <a href="/RainbowUnderlineHover/index.html">Rainbow Underline Hover CSS</a>
+      </li>
+      <li>
         <a href="/ScrollMask-Css/index.html">ScrollMask CSS</a>
       </li>
       <li>
