--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
         <a href="/StylePolaroids-Css/index.html">Style Polaroids CSS</a>
       </li>
       <li>
+        <a href="/SvgTextAnimation/index.html">Svg Text Animation</a>
+      </li>
+      <li>
         <a href="/TriangleHeader-Css/index.html">Triangle Header CSS</a>
       </li>
       <li>
