--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         <a href="/HTMLButton-Css/index.html">Html Button CSS</a>
       </li>
       <li>
+        <a href="/ImageSlideshow/index.html">Image Slideshow CSS</a>
+      </li>
+      <li>
         <a href="/Loading-Css/index.html">Loading CSS</a>
       </li>
       <li>
