--- a/RandomHexCodeGenerator/index.html
+++ b/RandomHexCodeGenerator/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
+    <div id="output-color"></div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
