--- a/RandomHexCodeGenerator/index.html
+++ b/RandomHexCodeGenerator/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
   <div class="container">
-    <div id="output-color"></div>
+    <div id="output-color">
+      <span></span>
+    </div>
+    <input type="text" id="output" readonly>
   </div>
   <script src="script.js"></script>
 </body>
