--- a/RandomHexCodeGenerator/index.html
+++ b/RandomHexCodeGenerator/index.html
@@ -11,7 +11,13 @@
       <span></span>
     </div>
     <input type="text" id="output" readonly>
+    <div class="btns">
+      <button id="gen-btn">Generate</button>
+      <button id="copy-btn">Copy</button>
+    </div>
   </div>
+  <div class="custom-alert">Hex Code Copied</div>
+  <!-- Script -->
   <script src="script.js"></script>
 </body>
 </html>
