--- a/RandomHexCodeGenerator/index.html
+++ b/RandomHexCodeGenerator/index.html
@@ -21,3 +21,8 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!--
+  DATA: 20/09/2021
+  LINK - TUTORIAL: https://www.youtube.com/watch?v=Zqc-fmRvpLw
+-->
+
