--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
         <a href="/RainbowUnderlineHover/index.html">Rainbow Underline Hover CSS</a>
       </li>
       <li>
+        <a href="/RandomHexCodeGenerator/index.html">Random Hex Code Generator</a>
+      </li>
+      <li>
         <a href="/ScrollMask-Css/index.html">ScrollMask CSS</a>
       </li>
       <li>
