--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
         <a href="/RandomHexCodeGenerator/index.html">Random Hex Code Generator</a>
       </li>
       <li>
+        <a href="/ScreenResolution/index.html">Screen Resolution</a>
+      </li>
+      <li>
         <a href="/ScrollMask-Css/index.html">ScrollMask CSS</a>
       </li>
       <li>
