--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
 
 </body>
 </html>
-<!--Links-->
 <!--
+  Links
+
   Site com todos os projetos desenvolvidos abaixo:
   LINK : https://italods-frontend-challenges.netlify.app/
 -->
