--- a/DisableFeatures/index.html
+++ b/DisableFeatures/index.html
@@ -6,6 +6,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+    Et reprehenderit hic cupiditate veritatis quam aperiam 
+    impedit, perferendis recusandae corporis cumque quia 
+    molestias, nostrum iure sunt saepe ratione nesciunt 
+    reiciendis ex tenetur suscipit. Ab et facilis hic 
+    voluptatum quaerat beatae ad.
+  </p>
 </body>
 </html>
 <!--
