--- a/DisableFeatures/index.html
+++ b/DisableFeatures/index.html
@@ -6,7 +6,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>
+  <p
+    oncopy="return false"
+    oncut="return false"
+    onpaste="return false"
+    ondragstart="return false"
+    ondrop="return false"
+  >
     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
     Et reprehenderit hic cupiditate veritatis quam aperiam 
     impedit, perferendis recusandae corporis cumque quia 
