--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <a href="/ClockGlassmorphism-Css/index.html">Clock Glassmorphism CSS</a>
       </li>
       <li>
+        <a href="/DisableFeatures/index.html">Disable Features</a>
+      </li>
+      <li>
         <a href="/DoubleBorder-Css/index.html">Double Border CSS</a>
       </li>
       <li>
