--- a/CheckInternetConnection/index.html
+++ b/CheckInternetConnection/index.html
@@ -6,10 +6,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div id="message">Sample Message</div>
+
+  <script src="script.js"></script>
 </body>
 </html>
-<!--
+<!-- 
   DATA: 26/09/2021
   LINK - TUTORIAL: https://www.youtube.com/watch?v=8g_kCKbfALM&t=58s
 -->
