--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <a href="/Cards-Css/index.html">Cards CSS</a>
       </li>
       <li>
+        <a href="/CheckInternetConnection/index.html">Check Internet Connection</a>
+      </li>
+      <li>
         <a href="/ClockGlassmorphism-Css/index.html">Clock Glassmorphism CSS</a>
       </li>
       <li>
