--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <a href="/ButtonGradient-Css/index.html">Button Gradient CSS</a>
       </li>
       <li>
+        <a href="CalculatorWeb/index.html">Calculator Web</a>
+      </li>
+      <li>
         <a href="/Cards-Css/index.html">Cards CSS</a>
       </li>
       <li>
