--- a/index.html
+++ b/index.html
@@ -16,30 +16,39 @@
     <h3>Linguagens: <span>HTLM, CSS e JS</span></h3>
     <ul>
       <li>
+        <img src="/AnalogClock-Css/thumb.png"/>
         <a href="/AnalogClock-Css/index.html">Analog Clock CSS</a>
       </li>
       <li>
+        <img src="/AuroraGradient-Css/thumb.png"/>
         <a href="/AuroraGradient-Css/index.html">Aurora Gradient CSS</a>
       </li>
       <li>
+        <img src="/Battery-Css/thumb.png"/>
         <a href="/Battery-Css/index.html">Battery CSS</a>
       </li>
       <li>
+        <img src="/BgGradient-Css/thumb.png"/>
         <a href="/BgGradient-Css/index.html">Background Gradient CSS</a>
       </li>
       <li>
+        <img src="/BgGradientOverlay-Css/thumb.png"/>
         <a href="/BgGradientOverlay-Css/index.html">Background Gradient Overlay CSS</a>
       </li>
       <li>
+        <img src="/Bookmark-Css/thumb.png"/>
         <a href="/Bookmark-Css/index.html">Bookmark CSS</a>
       </li>
       <li>
+        <img src="/BorderGradient-Css/thumb.png"/>
         <a href="/BorderGradient-Css/index.html">Border Gradient CSS</a>
       </li>
       <li>
+        <img src="/BorderRainbow-Css/thumb.png"/>
         <a href="/BorderRainbow-Css/index.html">Border Rainbow CSS</a>
       </li>
       <li>
+        <img src="/Button-Css/thumb.png"/>
         <a href="/Button-Css/index.html">Button CSS</a>
       </li>
       <li>
