--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <a href="/Button-Css/index.html">Button CSS</a>
       </li>
       <li>
+        <img src="/ButtonGlass-Css/thumb.png"/>
         <a href="/ButtonGlass-Css/index.html">Button Glassmorphism CSS</a>
       </li>
       <li>
