--- a/index.html
+++ b/index.html
@@ -14,135 +14,12 @@
     <h1>Projetos Desenvolvidos:</h1>
     <h3>Todos os projetos foram desenvovidos com o objetivo de absorver conhecimentos.</h3>
     <h3>Linguagens: <span>HTLM, CSS e JS</span></h3>
-    <ul>
-      <li>
-        <img src="/AnalogClock-Css/thumb.png"/>
-        <a href="/AnalogClock-Css/index.html">Analog Clock CSS</a>
-      </li>
-      <li>
-        <img src="/AuroraGradient-Css/thumb.png"/>
-        <a href="/AuroraGradient-Css/index.html">Aurora Gradient CSS</a>
-      </li>
-      <li>
-        <img src="/Battery-Css/thumb.png"/>
-        <a href="/Battery-Css/index.html">Battery CSS</a>
-      </li>
-      <li>
-        <img src="/BgGradient-Css/thumb.png"/>
-        <a href="/BgGradient-Css/index.html">Background Gradient CSS</a>
-      </li>
-      <li>
-        <img src="/BgGradientOverlay-Css/thumb.png"/>
-        <a href="/BgGradientOverlay-Css/index.html">Background Gradient Overlay CSS</a>
-      </li>
-      <li>
-        <img src="/Bookmark-Css/thumb.png"/>
-        <a href="/Bookmark-Css/index.html">Bookmark CSS</a>
-      </li>
-      <li>
-        <img src="/BorderGradient-Css/thumb.png"/>
-        <a href="/BorderGradient-Css/index.html">Border Gradient CSS</a>
-      </li>
-      <li>
-        <img src="/BorderRainbow-Css/thumb.png"/>
-        <a href="/BorderRainbow-Css/index.html">Border Rainbow CSS</a>
-      </li>
-      <li>
-        <img src="/Button-Css/thumb.png"/>
-        <a href="/Button-Css/index.html">Button CSS</a>
-      </li>
-      <li>
-        <img src="/ButtonGlass-Css/thumb.png"/>
-        <a href="/ButtonGlass-Css/index.html">Button Glassmorphism CSS</a>
-      </li>
-      <li>
-        <a href="/ButtonGradient-Css/index.html">Button Gradient CSS</a>
-      </li>
-      <li>
-        <a href="CalculatorWeb/index.html">Calculator Web</a>
-      </li>
-      <li>
-        <a href="/Cards-Css/index.html">Cards CSS</a>
-      </li>
-      <li>
-        <a href="/CheckInternetConnection/index.html">Check Internet Connection</a>
-      </li>
-      <li>
-        <a href="/ClockGlassmorphism-Css/index.html">Clock Glassmorphism CSS</a>
-      </li>
-      <li>
-        <a href="/DisableFeatures/index.html">Disable Features</a>
-      </li>
-      <li>
-        <a href="/DoubleBorder-Css/index.html">Double Border CSS</a>
-      </li>
-      <li>
-        <a href="/Heart-Css/index.html">Heart CSS</a>
-      </li>
-      <li>
-        <a href="/HTMLButton-Css/index.html">Html Button CSS</a>
-      </li>
-      <li>
-        <a href="/ImageSlideshow/index.html">Image Slideshow CSS</a>
-      </li>
-      <li>
-        <a href="/Loading-Css/index.html">Loading CSS</a>
-      </li>
-      <li>
-        <a href="/LoginGlassmorphism-Css/index.html">Login Glassmorphism CSS</a>
-      </li>
-      <li>
-        <a href="/Menu-Css/index.html">Menu CSS</a>
-      </li>
-      <li>
-        <a href="/MultipleBorders-Css/index.html">Multiple Borders CSS</a>
-      </li>
-      <li>
-        <a href="/PokemonCardGenerator/index.html">Pokemon Card Generator CSS</a>
-      </li>
-      <li>
-        <a href="/ProfileCard-Css/index.html">Profile Card CSS</a>
-      </li>
-      <li>
-        <a href="/Pulse-Css/index.html">Pulse CSS</a>
-      </li>
-      <li>
-        <a href="/RainbowTextAnimation-Css/index.html">Rainbow Text Animation CSS</a>
-      </li>
-      <li>
-        <a href="/RainbowUnderlineHover/index.html">Rainbow Underline Hover CSS</a>
-      </li>
-      <li>
-        <a href="/RandomHexCodeGenerator/index.html">Random Hex Code Generator</a>
-      </li>
-      <li>
-        <a href="/ScreenResolution/index.html">Screen Resolution</a>
-      </li>
-      <li>
-        <a href="/ScrollMask-Css/index.html">ScrollMask CSS</a>
-      </li>
-      <li>
-        <a href="/ShadowText-Css/index.html">Shadow Text CSS</a>
-      </li>
-      <li>
-        <a href="/SkeletonLoading-Css/index.html">Skeleton Loading CSS</a>
-      </li>
-      <li>
-        <a href="/StylePolaroids-Css/index.html">Style Polaroids CSS</a>
-      </li>
-      <li>
-        <a href="/SvgTextAnimation/index.html">Svg Text Animation</a>
-      </li>
-      <li>
-        <a href="/TriangleHeader-Css/index.html">Triangle Header CSS</a>
-      </li>
-      <li>
-        <a href="/WeatherGlassmorphism-Css/index.html">Weather Glassmorphism CSS</a>
-      </li>
-    </ul>
+    
+    <ul id="list"></ul>
+
     <footer>Developed by <a href="https://github.com/italods/">Italo Pereira</a></footer>
   </div>
-
+  <script src="script.js"></script>
 </body>
 </html>
 <!--
