--- a/FingerprintScannerCss/index.html
+++ b/FingerprintScannerCss/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="scan">
+    <div class="fingerprint"></div>
+    <h3>Scanning...</h3>
+  </div>
 </body>
 </html>
