--- a/LoadingButton-Css/index.html
+++ b/LoadingButton-Css/index.html
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <button class="button_loader">
+    <span class="button_text">
+      Loading...
+    </span>
+  </button>
 </body>
 </html>
 
